test/parsing/fail/atom_minus_atom_plus_string.j
class A {
    Void main() { return i - a + b + c + "q" + t; }
}
